# configsentinel

./: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  FIX_SUGGESTION.md  LICENSE  PRE-COMMIT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: PROMOTION.md  pre-commit.md
examples/: mcp.json
examples/.claude/: settings.json
examples/.github/workflows/: github_actions_bad.yml
src/configsentinel/: __init__.py  cli.py  issue.py  scanner.py
src/configsentinel/parsers/: __init__.py  json_parser.py  yaml_parser.py
src/configsentinel/reporters/: __init__.py  json_reporter.py  text.py
src/configsentinel/rules/: __init__.py  base.py  claude_rules.py  gha_rules.py  mcp_rules.py  registry.py
tests/: test_claude_rules.py  test_cli.py  test_gha_rules.py  test_integration_scanner.py  test_issue.py  test_line_reporting.py  test_mcp_rules.py  test_parsers.py  test_realistic_fixtures.py  test_reporters.py  test_rules.py
tests/fixtures/full_project/: mcp.json
tests/fixtures/full_project/.claude/: settings.json
tests/fixtures/full_project/.github/workflows/: ci.yml
tests/fixtures/invalid/claude_project/.claude/: settings.json  settings.local.json
tests/fixtures/invalid/claude_project/claude/: settings.json
tests/fixtures/invalid/mcp_project/: mcp.config.json  mcp.json
tests/fixtures/invalid/mcp_project/.mcp/: config.json
tests/fixtures/medium_low_project/: mcp.json
tests/fixtures/medium_low_project/.github/workflows/: ci.yml
tests/fixtures/realistic/mcp_project/: mcp.config.json  mcp.json
tests/fixtures/valid/mcp_project/: mcp.json
(+16 files in other folders)
