[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "configsentinel"
version = "0.1.0"
description = "Lint AI agent, MCP, and automation configs before they break production."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "ConfigSentinel Contributors" }
]
keywords = ["ai", "mcp", "claude", "github-actions", "configuration", "lint", "security"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
  "Typing :: Typed"
]
dependencies = [
  "typer",
  "rich",
  "pydantic",
  "pyyaml"
]

[project.optional-dependencies]
dev = [
  "pytest"
]

[project.scripts]
configsentinel = "configsentinel.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
